# tokenwise

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: pareto.py  strategy_pareto.py  strategy_results.csv
examples/: 01_routing_strategies.py  02_plan_and_execute.py  03_budget_comparison.py  04_proxy_client.py  README.md  openclaw_integration.md
src/tokenwise/: __init__.py  __main__.py  cli.py  config.py  executor.py  ledger_store.py  models.py  planner.py  proxy.py  registry.py  risk_gate.py  router.py
src/tokenwise/data/: model_capabilities.json
src/tokenwise/providers/: __init__.py  _openai_compat.py  anthropic.py  base.py  google.py  openai.py  openrouter.py  resolver.py
tests/: conftest.py  test_cli.py  test_executor.py  test_ledger_store.py  test_planner.py  test_providers.py  test_proxy.py  test_registry.py  test_risk_gate.py  test_router.py  test_routing_trace.py
